# FastVQA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a  check.py  cmake.sh  config.txt  modules.sh
examples/hamiltonians/: ntrulike_4_10.hml
experiment_files/: cvar_experiment.sh  fit_data.sage  fit_data.sage.py  kokotina.txt  plotQAOAenergy_extended.py  plotVQEenergy.py  plot_cvar_convergence.py  plot_cvar_hit_rate.py  plot_dim_convergence.py  plot_dim_rank.py  plot_kokotina.py  plot_qaoa_hitrates.py  plot_r.py  plot_ranks.py  plot_slurm.py  rank_experiment.sh  run_rank28.slurm  run_super_instance.slurm  run_super_instance_nocvar.slurm  run_super_instance_qaoa_like_vqe.slurm  run_super_instance_qaoa_like_vqe_cvar.slurm  slurm-108951.out  slurm-109014.out  slurm-109054.out  slurm-109071.out  slurm-109090.out  slurm-109144.out  statsfile_0_15.txt  statsfile_100_15.txt  statsfile_101_15.txt  statsfile_102_15.txt  statsfile_103_15.txt  statsfile_104_15.txt  statsfile_105_15.txt  statsfile_106_15.txt  statsfile_107_15.txt  statsfile_108_15.txt  statsfile_109_15.txt  statsfile_10_15.txt  statsfile_110_15.txt  (+117 more)
experiment_files/constant_r/: cvar_experiment.sh  plot_r.py
experiment_files/just_picking_second_highest/: statsfile_0_15.txt  statsfile_100_15.txt  statsfile_101_15.txt  statsfile_102_15.txt  statsfile_103_15.txt  statsfile_104_15.txt  statsfile_105_15.txt  statsfile_106_15.txt  statsfile_107_15.txt  statsfile_108_15.txt  statsfile_109_15.txt  statsfile_10_15.txt  statsfile_110_15.txt  statsfile_111_15.txt  statsfile_112_15.txt  statsfile_113_15.txt  statsfile_114_15.txt  statsfile_115_15.txt  statsfile_116_15.txt  statsfile_117_15.txt  statsfile_118_15.txt  statsfile_119_15.txt  statsfile_11_15.txt  statsfile_120_15.txt  statsfile_121_15.txt  statsfile_122_15.txt  statsfile_123_15.txt  statsfile_124_15.txt  statsfile_125_15.txt  statsfile_126_15.txt  statsfile_127_15.txt  statsfile_12_15.txt  statsfile_13_15.txt  statsfile_14_15.txt  statsfile_15_15.txt  statsfile_16_15.txt  statsfile_17_15.txt  statsfile_18_15.txt  statsfile_19_15.txt  statsfile_1_15.txt  (+88 more)
experiment_files/r_0.050/: statsfile_0_15.txt  statsfile_101_15.txt  statsfile_102_15.txt  statsfile_104_15.txt  statsfile_106_15.txt  statsfile_107_15.txt  statsfile_110_15.txt  statsfile_111_15.txt  statsfile_114_15.txt  statsfile_116_15.txt  statsfile_119_15.txt  statsfile_120_15.txt  statsfile_121_15.txt  statsfile_18_15.txt  statsfile_19_15.txt  statsfile_24_15.txt  statsfile_25_15.txt  statsfile_28_15.txt  statsfile_30_15.txt  statsfile_34_15.txt  statsfile_37_15.txt  statsfile_38_15.txt  statsfile_42_15.txt  statsfile_46_15.txt  statsfile_47_15.txt  statsfile_49_15.txt  statsfile_4_15.txt  statsfile_53_15.txt  statsfile_54_15.txt  statsfile_55_15.txt  statsfile_56_15.txt  statsfile_58_15.txt  statsfile_5_15.txt  statsfile_62_15.txt  statsfile_63_15.txt  statsfile_64_15.txt  statsfile_73_15.txt  statsfile_75_15.txt  statsfile_76_15.txt  statsfile_78_15.txt  (+13 more)
generated_lattices/: example  genLittleSombrero.sage  generate_lattices.sh
include/: AqcPqcAccelerator.h  accelerator.h  accelerator_base.h  ansatz.h  circuit.h  cost_function.h  experimentBuffer.h  fastVQA.h  gate.h  hamiltonian.h  optimizer.h  pauliHamiltonian.h  problem_generator.h  symbolic_manipulation.h
paper_experiment/: out_higher_dims2.csv  out_higher_dims2_matrices.csv  out_higher_dims_small_dims.csv  out_higher_dims_small_dims_matrices.csv  super_instance.csv  super_instance_matrices.csv
plot/: plotQAOAenergy.py  plotQAOAenergy_extended.py  zero_stats.py
quantum_backends/: CMakeLists.txt
src/: CMakeLists.txt  Circuit.h  ExperimentBuffer.h  Gate.h  Optimizer.h  accelerator.cpp  accelerator_base.cpp  accelerator_distributed.cpp  ansatz.cpp  ansatz.h  apply_gate.cpp  circuit.cpp  config_io.cpp  config_io.h  enumeration.h  executionStatistics.cpp  executionStatistics.h  fastVQA.cpp  fastVQA.cpp.orig  fastVQA.cpp_OLD  fastVQA.h  gate.cpp  hamiltonian.cpp  lattiQ.cpp  lattiQ.h  lattice.cpp  lattice.h  littleSombrero.cpp  littleSombrero.h  logger.h  pauliHamiltonian.cpp  popl.hpp  problem_generator.cpp  run_paper_experiment.cpp  run_paper_experiment.cpp.orig  run_paper_experiment.h  savehml.h  symbolic_manipulation.cpp  symbolic_manipulation.h  utils.cpp  (+5 more)
src/accelerator/: CMakeLists.txt  accelerator.cpp  accelerator.h  alpha_functions.cpp  apply_gate.cpp
src/ansatz/: CMakeLists.txt  ansatz.cpp  ansatz.h
src/aqc_pqc/: aqc_pqc_accelerator.cpp  aqc_pqc_opt_rank_reduce.cpp  aqc_pqc_opt_rank_reduce.cpp.orig  aqc_pqc_opt_trivial.cpp  aqc_pqc_opt_trivial.cpp.orig  derivatives_evaluation.cpp
src/circuit/: CMakeLists.txt  Circuit.cpp  Circuit.h  Gate.cpp  Gate.h  Instruction.h
src/hamiltonian/: CMakeLists.txt  hamiltonian.cpp  hamiltonian.h
src/indicators/: progress_bar.hpp
src/io/: CMakeLists.txt  logger.h  saveProgress.cpp  saveProgress.hpp
src/io/indicators/: progress_bar.hpp  setting.hpp
src/io/indicators/details/: stream_helper.hpp
src/lattice/: CMakeLists.txt  abstractLatticeInput.hpp  hmlLattice.hpp  lattice.cpp  lattice.h  lattice_utils.cpp  quboToXvector.cpp
src/latticeAlgorithms/: CMakeLists.txt  iterativeLatticeReduction.cpp  iterativeLatticeReduction.h  latticeAlgorithm.cpp  latticeAlgorithm.h
src/optimizer/: CMakeLists.txt  nlopt_optimizer.cpp  optimizer.h
src/optimizer/optimizer/: CMakeLists.txt  nlopt_optimizer.cpp  optimizer.h
src/qaoa/: CMakeLists.txt  manifest.json  qaoa.cpp  qaoa.h  qaoaOptions.cpp  qaoaOptions.h
src/vqas/: qaoa.cpp  vqe.cpp
src/vqe/: CMakeLists.txt  qaoa.cpp  qaoa.h  vqe.cpp  vqe.h  vqeOptions.h
tests/: CMakeLists.txt  ansatz_test.cpp  hamiltonian_test.cpp  iterativeLatticeReductionAlgo.cpp  measurementQubitEndianness.cpp  nlopt_test.cpp  svpToQubo.cpp
tests/googletest/: CMakeLists.txt
tests/test_files/: config_iterativeLatticeReduction.txt  config_svpToQubo.txt
tests/test_files/lattices/: example_5.l  q_10_1_20_b.l  q_130_1_20_b.l
tests/test_files/lattices/matlab_output/: example_5.txt  generateOutput.asv  generateOutput.m  q_10_1_20_b.txt  q_130_1_20_b.txt
(+55767 files in other folders)
